--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         </div>
         <div class="about-content">
             <div class="about-text" data-aos="fade-up">
-                <h3>Olá! Sou Murilo Fangel.</h3>
-                <p>Atualmente, curso o primeiro ano de Artes Visuais na UNESPAR – FAP (Escola de Artes do Paraná), com previsão de conclusão em 2025. Resido em Curitiba/PR, no bairro Bacacheri, onde desenvolvo meus projetos e busco aprimorar minhas paixões: a criação visual e a exploração de novas mídias.</p>
-                <p>Estou em busca de oportunidades de estágio onde possa aplicar e expandir minhas habilidades, com foco especial nas áreas de audiovisual e gestão de redes sociais. Sou dinâmico, com grande facilidade para aprender e me adaptar a novas ferramentas e fluxos de trabalho, incluindo o uso de Inteligência Artificial para otimizar a criação e produção de conteúdo.</p>
-                <p>Acredito na arte como um poderoso meio de comunicação e transformação, e estou sempre em busca de aprimorar minhas habilidades técnicas através de cursos e muita prática autodidata.</p>
+                <h3>Olá!</h3>
+                <p>Atualmente, curso o primeiro ano de Artes Visuais na UNESPAR – FAP/Curitiba II (Faculdade de Artes do Paraná), com previsão de conclusão em 2028. Resido em Curitiba/PR, no bairro Bacacheri</p>
+                <p>Estou em busca de oportunidades de estágio, freelance ou efetivo onde possa aplicar e expandir minhas habilidades, com foco especial nas áreas de audiovisual, artes e tecnologia.</p>
+                <p>Prezo pela versatilidade, com grande facilidade para aprender e me adaptar à novas ferramentas, programas, workspaces e ao uso ou não de Inteligência Artificial para otimizar a criação e produção de conteúdo.</p>
             </div>
             
             <div class="skills-section" data-aos="fade-up" data-aos-delay="200">
@@ -86,14 +86,14 @@
                      <div class="skill-category">
                         <h4><i class="fas fa-bullhorn"></i> Criação de Conteúdo & Redes Sociais</h4>
                         <div class="skill-item"><i class="fas fa-check"></i> Vídeos dinâmicos e com ritmo</div>
-                        <div class="skill-item"><i class="fas fa-check"></i> Posts e textos para web</div>
-                        <div class="skill-item"><i class="fas fa-check"></i> Projetos culturais</div>
+                        <div class="skill-item"><i class="fas fa-check"></i> Posts e imagens para redes sociais</div>
+                        <div class="skill-item"><i class="fas fa-check"></i> Divulgação de projetos culturais</div>
                         <div class="skill-item"><i class="fas fa-check"></i> Instagram, TikTok, YouTube</div>
                     </div>
                     <div class="skill-category">
-                        <h4><i class="fas fa-cogs"></i> Tecnologia & IA</h4>
-                        <div class="skill-item"><i class="fas fa-check"></i> Automação de tarefas</div>
-                        <div class="skill-item"><i class="fas fa-check"></i> IA para criação de conteúdo</div>
+                        <h4><i class="fas fa-cogs"></i> Tecnologia</h4>
+                        <div class="skill-item"><i class="fas fa-check"></i> Facilidade com meios digitais</div>
+                        <div class="skill-item"><i class="fas fa-check"></i> IA/Ferramentas para automação e revisão</div>
                         <div class="skill-item"><i class="fas fa-check"></i> Conhecimento em hardware/software</div>
                     </div>
                 </div>
@@ -112,7 +112,7 @@
             <div class="video-gallery" data-aos="fade-up" data-aos-delay="200">
                 <div class="video-item">
                     <h4>Mimo a gente NUNCA esquece | 1º Ano FEC 2022</h4>
-                    <p>Edição, filmagem e direção de curta-metragem sobre história/sociologia para festival estudantil.</p>
+                    <p>Rotteiro, edição, filmagem e direção de curta-metragem com abordagem histórica/sociológica para festival estudantil.</p>
                     <div class="video-embed-container">
                         <iframe src="https://www.youtube.com/embed/16" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
@@ -140,7 +140,7 @@
                 </div>
                 <div class="video-item">
                     <h4>IA NA EDUCAÇÃO - Curta 2023</h4>
-                    <p>Edição de vídeo para trabalho escolar explorando o tema da Inteligência Artificial na educação.</p>
+                    <p>Edição de vídeo rápido/descontraído para trabalho escolar explorando o tema da Inteligência Artificial na educação.</p>
                     <div class="video-embed-container">
                         <iframe src="https://www.youtube.com/embed/16" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
@@ -206,10 +206,10 @@
             <div class="experience-item">
                 <h4>Edição de Imagem para Plataforma Web</h4>
                 <p><strong>Projeto:</strong> <a href="https://studiodcpc.com/" target="_blank" rel="noopener noreferrer">StudioDCPC</a></p>
-                <p>Responsável pela edição de imagens para a plataforma online.</p>
+                <p>Freelance em edição de imagens para a plataforma online desde 2021.</p>
             </div>
             <div class="experience-item">
-                <h4>Festival Estudantil de Curtas-Metragens</h4>
+                <h4>Festival Estudantil de Curtas</h4>
                 <p>Participação ativa em múltiplas edições do festival, com os seguintes destaques (links para os vídeos na seção Portfólio):</p>
                 <ul>
                     <li><strong>"Mimo a gente NUNCA esquece" (2022):</strong> Edição, filmagem e direção (História/Sociologia).</li>
@@ -219,7 +219,7 @@
                 </ul>
             </div>
             <div class="experience-item">
-                <h4>Edição de Vídeo para Projeto Escolar</h4>
+                <h4>Edição de Vídeo descontraído para Projeto Escolar</h4>
                  <p><strong>"IA NA EDUCAÇÃO - Curta" (2023):</strong> Edição de vídeo. (Link para o vídeo na seção Portfólio).</p>
             </div>
             <div class="experience-item">
@@ -236,7 +236,7 @@
     <section id="contact">
         <div class="section-header" data-aos="fade-up">
             <h2 class="section-title">Vamos Conversar?</h2>
-            <p class="section-subtitle">Interessado em colaborar, discutir um projeto ou oportunidade de estágio? Entre em contato!</p>
+            <p class="section-subtitle">Interessado em colaborar, discutir um projeto ou oportunidade? Entre em contato!</p>
         </div>
         
         <div class="contact-container">
@@ -257,7 +257,7 @@
                     </div>
                      <div class="contact-item">
                         <i class="fab fa-tiktok"></i>
-                        <a href="#" class="contact-link" target="_blank" rel="noopener noreferrer">@seu_tiktok (Atualize o link)</a>
+                        <a href="#" class="contact-link" target="_blank" rel="noopener noreferrer">@muri.lo.f.m</a>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
