--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h3>Olá! Saiba mais sobre mim:</h3>
                 <p>Atualmente, curso o primeiro ano de Artes Visuais na UNESPAR – FAP/Curitiba II (Faculdade de Artes do Paraná), com previsão de conclusão em 2028. Resido em Curitiba/PR, no bairro Bacacheri</p>
                 <p>Estou em busca de oportunidades de estágio, freelance ou efetivo onde possa aplicar e expandir minhas habilidades, com foco especial nas áreas de audiovisual, artes e tecnologia.</p>
-                <p>Prezo pela versatilidade, com grande facilidade para aprender e me adaptar à novas ferramentas, programas, workspaces e ao uso ou não de Inteligência Artificial para otimizar a criação e produção de conteúdo.</p>
+                <p>Prezo pela versatilidade, com grande facilidade para aprender e me adaptar a novas ferramentas, programas, workspaces e ao uso ou não de Inteligência Artificial para otimizar a criação e produção de conteúdo.</p>
             </div>
             
             <div class="skills-section" data-aos="fade-up" data-aos-delay="200">
