--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
                         <h4><i class="fas fa-pencil-alt"></i> Ilustração Digital</h4>
                         <div class="skill-item"><i class="fas fa-check"></i> Clip Studio Paint</div>
                         <div class="skill-item"><i class="fas fa-check"></i> Paint Tool SAI</div>
-                        <div class="skill-item"><i class="fas fa-check"></i> (Outras ferramentas)</div>
+                        <div class="skill-item"><i class="fas fa-check"></i> AutoDesk SketchBook</div>
+                        <div class="skill-item"><i class="fas fa-check"></i> Adobe Illustrator</div>
                     </div>
                     <div class="skill-category">
                         <h4><i class="fab fa-adobe"></i> Pacote Adobe</h4>
