--- a/index.html
+++ b/index.html
@@ -81,8 +81,11 @@
                         <div class="skill-item"><i class="fas fa-check"></i> Adobe Illustrator</div>
                     </div>
                     <div class="skill-category">
-                        <h4><i class="fab fa-adobe"></i> Pacote Adobe</h4>
-                        <div class="skill-item"><i class="fas fa-check"></i> Ampla experiência geral</div>
+                        <h4><i class="fas fa-cogs"></i> Pacote Adobe</h4>
+                        <div class="skill-item"><i class="fas fa-check"></i> Familiridade na maioria dos produtos</div>
+                        <div class="skill-item"><i class="fas fa-check"></i> Conhecimento na integração entre os programas</div>
+                        <div class="skill-item"><i class="fas fa-check"></i> Ampla experiência geral nos softwares de mídia</div>
+                        
                     </div>
                      <div class="skill-category">
                         <h4><i class="fas fa-bullhorn"></i> Criação de Conteúdo & Redes Sociais</h4>
@@ -92,7 +95,7 @@
                         <div class="skill-item"><i class="fas fa-check"></i> Instagram, TikTok, YouTube</div>
                     </div>
                     <div class="skill-category">
-                        <h4><i class="fas fa-cogs"></i> Tecnologia</h4>
+                        <h4><i class=""></i> Tecnologia</h4>
                         <div class="skill-item"><i class="fas fa-check"></i> Facilidade com meios digitais</div>
                         <div class="skill-item"><i class="fas fa-check"></i> IA/Ferramentas para automação e revisão</div>
                         <div class="skill-item"><i class="fas fa-check"></i> Conhecimento em hardware/software</div>
