--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="video-gallery" data-aos="fade-up" data-aos-delay="200">
                 <div class="video-item">
                     <h4>Mimo a gente NUNCA esquece | 1º Ano FEC 2022</h4>
-                    <p>Rotteiro, edição, filmagem e direção de curta-metragem com abordagem histórica/sociológica para festival estudantil.</p>
+                    <p>Roteiro, edição, filmagem e direção de curta-metragem com abordagem histórica/sociológica para festival estudantil.</p>
                     <div class="video-embed-container">
                         <iframe src="https://www.youtube.com/embed/16" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
