--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <div class="skill-item"><i class="fas fa-check"></i> Instagram, TikTok, YouTube</div>
                     </div>
                     <div class="skill-category">
-                        <h4><i class=""></i> Tecnologia</h4>
+                        <h4><i class="fas fa-cogs"></i> Tecnologia</h4>
                         <div class="skill-item"><i class="fas fa-check"></i> Facilidade com meios digitais</div>
                         <div class="skill-item"><i class="fas fa-check"></i> IA/Ferramentas para automação e revisão</div>
                         <div class="skill-item"><i class="fas fa-check"></i> Conhecimento em hardware/software</div>
