--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         
                     </div>
                      <div class="skill-category">
-                        <h4><i class="fas fa-bullhorn"></i> Criação de Conteúdo & Redes Sociais</h4>
+                        <h4><i class="fas fa-bullhorn"></i> Criação de Conteúdo</h4>
                         <div class="skill-item"><i class="fas fa-check"></i> Vídeos dinâmicos e com ritmo</div>
                         <div class="skill-item"><i class="fas fa-check"></i> Posts e imagens para redes sociais</div>
                         <div class="skill-item"><i class="fas fa-check"></i> Divulgação de projetos culturais</div>
