--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
         <div class="gallery-container portfolio-subsection">
              <h3 class="subsection-title" data-aos="fade-up">Galerias de Imagens</h3>
-            <p class="subsection-description" data-aos="fade-up">Navegue pelas minhas criações em arte digital, tradicional, fotografia e manipulação gráfica. <br/>(Você pode adicionar suas imagens editando o arquivo <code>assets/gallery-content.json</code> e colocando os arquivos de imagem na pasta <code>assets/images/</code>)</p>
+            <p class="subsection-description" data-aos="fade-up">Navegue pelas minhas criações em arte digital, tradicional, fotografia e manipulação gráfica.</p>
             <div class="gallery-tabs" data-aos="fade-up" data-aos-delay="200">
                 <button class="gallery-tab active" data-section="digital">Arte Digital</button>
                 <button class="gallery-tab" data-section="traditional">Arte Tradicional</button>
