--- a/index.html
+++ b/index.html
@@ -118,35 +118,35 @@
                     <h4>Mimo a gente NUNCA esquece | 1º Ano FEC 2022</h4>
                     <p>Roteiro, edição, filmagem e direção de curta-metragem com abordagem histórica/sociológica para festival estudantil.</p>
                     <div class="video-embed-container">
-                        <iframe src="https://www.youtube.com/embed/16" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/YV4ExSchtac" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="video-item">
                     <h4>Comporte-se! | 3º Ano FEC 2021</h4>
                     <p>Edição e apoio criativo em curta-metragem para festival estudantil.</p>
                     <div class="video-embed-container">
-                        <iframe src="https://www.youtube.com/embed/16" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/SiGE_uhvTgwfW0x7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="video-item">
                     <h4>Curta dos Curtas Final (2022) - Quem é o FEC?</h4>
                     <p>Edição para o último curta e encerramento do projeto do festival.</p>
                     <div class="video-embed-container">
-                        <iframe src="https://www.youtube.com/embed/16" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/9vbOHLRuyzEah7yJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="video-item">
                     <h4>É coisa de menina | 2º Ano FEC 2020</h4>
                     <p>Edição e apoio criativo para curta-metragem em festival estudantil.</p>
                     <div class="video-embed-container">
-                        <iframe src="https://www.youtube.com/embed/16" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/CLfVPuoxyiFeEXI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="video-item">
                     <h4>IA NA EDUCAÇÃO - Curta 2023</h4>
                     <p>Edição de vídeo rápido/descontraído para trabalho escolar explorando o tema da Inteligência Artificial na educação.</p>
                     <div class="video-embed-container">
-                        <iframe src="https://www.youtube.com/embed/16" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/TVO4Bqby_aJk4pI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
