--- a/index.html
+++ b/index.html
@@ -112,41 +112,40 @@
         </div>
         
         <div class="portfolio-subsection" id="videos">
-            <h3 class="subsection-title" data-aos="fade-up">Vídeos</h3>
             <div class="video-gallery" data-aos="fade-up" data-aos-delay="200">
                 <div class="video-item">
                     <h4>Mimo a gente NUNCA esquece | 1º Ano FEC 2022</h4>
                     <p>Roteiro, edição, filmagem e direção de curta-metragem com abordagem histórica/sociológica para festival estudantil.</p>
                     <div class="video-embed-container">
-                        <iframe src="https://www.youtube.com/c/3oanoEFCMSP/playlists" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/watch?v=cc-QWd5Jrh04" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="video-item">
                     <h4>Comporte-se! | 3º Ano FEC 2021</h4>
                     <p>Edição e apoio criativo em curta-metragem para festival estudantil.</p>
                     <div class="video-embed-container">
-                        <iframe src="https://www.youtube.com/watch?v=mNC--hT3mvE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/watch?v=cc-QWd5Jrh05" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="video-item">
                     <h4>Curta dos Curtas Final (2022) - Quem é o FEC?</h4>
                     <p>Edição para o último curta e encerramento do projeto do festival.</p>
                     <div class="video-embed-container">
-                        <iframe src="https://www.youtube.com/watch?v=Lp2PvDmqnho" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/watch?v=cc-QWd5Jrh06" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="video-item">
                     <h4>É coisa de menina | 2º Ano FEC 2020</h4>
                     <p>Edição e apoio criativo para curta-metragem em festival estudantil.</p>
                     <div class="video-embed-container">
-                        <iframe src="https://www.youtube.com/watch?v=2dcACVPFcwY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/watch?v=cc-QWd5Jrh07" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="video-item">
                     <h4>IA NA EDUCAÇÃO - Curta 2023</h4>
                     <p>Edição de vídeo rápido/descontraído para trabalho escolar explorando o tema da Inteligência Artificial na educação.</p>
                     <div class="video-embed-container">
-                        <iframe src="https://www.youtube.com/watch?v=cjvRWYOYWt4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/watch?v=cc-QWd5Jrh08" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
